<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#133729"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCarView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/linear1"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:layout_marginTop="321dp"
        android:layout_marginBottom="321dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:strokeColor="#FFB874"
        app:strokeWidth="2dp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/myViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bottom_style"
        android:orientation="vertical"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/reset"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:clickable="true"
                android:contentDescription="@string/reset"
                android:focusable="true"
                android:padding="1dp"
                android:rotation="45"
                android:src="@drawable/img" />

            <TextView
                android:id="@+id/countDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="end"
                android:hint="@string/hint"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/time"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/time"
                android:src="@drawable/img_1" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/btnAdd"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/center"
                android:src="@drawable/ic_tasbeeh_add_button" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="65dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/center"
                    android:padding="5dp"
                    android:src="@drawable/kaba" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>